--- a/drake.css
+++ b/drake.css
@@ -1,45 +1,17 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-html, body {
-	padding:0px;
-	margin:0px;
-	width:100%;
-	height:100%;
-}
-#backgroundContainer {
-	position:absolute;
-	z-index:-5;
-	width:100%;
-	height:100%;
-	margin:0px;
-	top:0px;
-}
-.block {
-	display:inline-block;
-	float:left;
-	width:4%;
-	height:5%;
-	min-width:12px;
-	min-height:15px;
-	margin:0px;
+body {
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
 }
 
-
-#button:active {
-	background-color:#FF8800;
-}
-#upgrade:active {
-	background-color:#FF8800;
-}
-#button:hover {
-	border-color:#E45635;
-}
-#upgrade:hover {
-	border-color:#E45635;
-}
-p {
-	padding:1em;
-	font-size:2em;
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
