--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .title h1{
     font-size: 36px;
     font-family: 'Lato', sans-serif;
-    margin-top:20em;
+    margin-top:10em;
     margin-left: auto;
     margin-right:auto;
     text-align: center;
@@ -24,6 +24,26 @@
     z-index: 3;
 }
 
+  .s1-text {
+      font-size: 12px;
+    font-family: 'Lato', sans-serif;
+    margin-top:5em;
+    margin-left: auto;
+    margin-right:auto;
+    text-align: center;
+
+    /* Stryling the text and giving it gradiant */
+    color:#ffffff;
+    background: -webkit-linear-gradient(#eee, #333);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-shadow: 6px 6px 0px rgba(0,0,0,0.2);
+
+    /* Make sure text is infront of background images */
+    display:block;
+    position: relative;
+    z-index: 3;
+      }
 
 @keyframes move-twink-back {
     from {background-position:0 0;}
