--- a/style.css
+++ b/style.css
@@ -84,3 +84,10 @@
     animation:move-clouds-back 200s linear infinite;
 }
 
+div.fixed {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  width: 300px;
+  border: 3px solid #73AD21;
+}
