--- a/style.css
+++ b/style.css
@@ -86,8 +86,8 @@
 
 div.fixed {
   position: fixed;
-  bottom: 0;
-  right: 0;
+  bottom: -10px;
+  right: 100px;
   width: 300px;
   border: 3px solid #73AD21;
 }
